--- a/Desktop/landing/index.html
+++ b/Desktop/landing/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
   		<meta charset="utf-8">
-  		<title>Currículo - Vitor Leal Santana</title>
+  		<title>Currículo - Vitor Santana</title>
   		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Roboto:wght@100;400;700&display=swap">
   		<script src="https://kit.fontawesome.com/997241d07c.js" crossorigin="anonymous"></script>
   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
