--- a/Desktop/landing/index.html
+++ b/Desktop/landing/index.html
@@ -16,6 +16,7 @@
 		<h1>Vitor Leal Santana</h1>
 		<p>Currículo</p>
 		<img src="images/vitor.jpg" alt="" class="avatar">
+		Em 1955 pessoal gostava de rock
 	</div>
 
 	<div class="container">
